[gd_scene load_steps=5 format=3 uid="uid://b32tym1a5eeh7"]

[ext_resource type="Script" path="res://scripts/collectables/item.gd" id="1_wh5dn"]
[ext_resource type="Texture2D" uid="uid://dh3w4hanvbu7g" path="res://sprites/item/basic/damage-op.png" id="2_3j1xg"]
[ext_resource type="Texture2D" uid="uid://cxlftvk4q3mda" path="res://sprites/item/basic/health-op.png" id="3_jff0x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dffaa"]
radius = 25.1794

[node name="Item" type="Node2D"]
script = ExtResource("1_wh5dn")

[node name="ItemArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemArea"]
shape = SubResource("CircleShape2D_dffaa")

[node name="Item1" type="Sprite2D" parent="ItemArea"]
scale = Vector2(21, 16)
texture = ExtResource("2_3j1xg")

[node name="Item2" type="Sprite2D" parent="ItemArea"]
scale = Vector2(21, 16)
texture = ExtResource("3_jff0x")

[connection signal="body_entered" from="ItemArea" to="." method="_on_item_area_body_entered"]
